# axum_api_template

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
migrations/: 20240228230053_create_users.up.sql
src/: app_state.rs  lib.rs  main.rs
src/middleware/: require_authentication.rs
src/models/: user.rs
src/queries/users/: create.rs  login.rs  logout.rs  mod.rs
src/router/: healthcheck.rs  mod.rs  user.rs
src/utilities/: app_error.rs  hash.rs  jwt.rs
